# beetchef-core

./: .gitignore  CMakeLists.txt  Makefile  README.md
modules/app/: CMakeLists.txt
modules/app/include/app/: engine.hpp
modules/app/src/: beetchef.cpp  engine.cpp
modules/app/test/: app_tests.cpp  engine_tests.cpp
modules/audio/: CMakeLists.txt
modules/audio/include/audio/: audio_interface_wrap.hpp  callback_function.hpp  types.hpp
modules/audio/src/: audio_interface_wrap.cpp  callback_function.cpp
modules/console_ui/: CMakeLists.txt
modules/console_ui/include/console_ui/: console_ui.hpp
modules/console_ui/src/: click.cpp  click.hpp  console_ui.cpp
modules/jack_audio/: CMakeLists.txt
modules/jack_audio/include/jack_audio/: jack_audio_interface.hpp  jack_client.hpp  jack_error.hpp  jack_port.hpp
modules/jack_audio/src/: jack_audio_interface.cpp  jack_client.cpp  jack_port.cpp
modules/messaging/: CMakeLists.txt
modules/messaging/include/messaging/: messaging_handler.hpp
modules/messaging/lib/oscpack_1_1_0/: OscSendTests  SimpleReceive
modules/messaging/src/: messaging_handler.cpp
modules/processing/: CMakeLists.txt
modules/processing/include/processing/: timeline.hpp  track.hpp  types.hpp
modules/processing/src/: timeline.cpp  track.cpp
modules/processing/test/: processing_tests.cpp  timeline_tests.cpp
src/: a.out  beetchef.cpp  beetchef_error.hpp  click.cpp  click.hpp  console_ui.cpp  console_ui.hpp  engine.cpp  engine.h  engine.hpp  jack_client_wrapper.cpp  jack_client_wrapper.hpp  jack_connection_node.cpp  jack_connection_node.hpp  messaging_handler.cpp  messaging_handler.hpp  timeline.cpp  timeline.hpp  track.cpp  track.hpp
src/audio/: CMakeLists.txt  audio_base.cpp  audio_base.hpp  audio_interface.cpp  audio_interface.hpp  audio_provider.cpp  audio_provider.hpp  audio_types.hpp  callback_function.cpp  callback_function.hpp
src/audio/include/audio/: audio_interface.hpp  audio_interface_wrap.hpp  callback_function.hpp
src/audio/jack/: jack_audio_interface.cpp  jack_audio_interface.hpp  jack_audio_provider.cpp  jack_audio_provider.hpp  jack_client.cpp  jack_client.hpp  jack_client_wrapper.cpp  jack_client_wrapper.hpp  jack_impl_provider.cpp  jack_impl_provider.hpp  jack_port.cpp  jack_port.hpp  jack_port_handle.cpp  jack_port_handle.hpp
src/audio/src/: audio_base.cpp  audio_interface.cpp  audio_interface_wrap.cpp  callback_function.cpp
src/audio_base/: CMakeLists.txt
src/audio_base/include/audio_base/: audio_interface.hpp  types.hpp
src/audio_base/src/: audio_base.cpp  audio_interface.cpp  callback_function.cpp
src/jack_audio/: CMakeLists.txt
src/jack_audio/include/jack_audio/: jack_audio_interface.hpp  jack_client.hpp  jack_error.hpp  jack_init_error.hpp  jack_port.hpp
src/jack_audio/src/: jack_audio_interface.cpp  jack_client.cpp  jack_impl_provider.cpp  jack_port.cpp
src/jack_audio_base/: CMakeLists.txt
src/jack_audio_base/include/jack_audio_base/: jack_audio_interface.hpp  jack_client.hpp  jack_impl_provider.hpp  jack_port.hpp
src/jack_audio_base/src/: jack_audio_interface.cpp  jack_client.cpp  jack_impl_provider.cpp  jack_port.cpp
src/messaging/: CMakeLists.txt
src/messaging/include/messaging/: messaging_handler.hpp
src/messaging/lib/oscpack_1_1_0/: OscDump  OscReceiveTest  OscUnitTests  SimpleSend
src/messaging/src/: messaging_handler.cpp
src/processing/: CMakeLists.txt
src/processing/include/processing/: timeline.hpp  track.hpp  types.hpp
src/processing/src/: timeline.cpp  track.cpp
src/ui/console/: console_ui.cpp  console_ui.hpp
